--- a/app/templates/movie.html
+++ b/app/templates/movie.html
@@ -1,1 +1,14 @@
-<h1> Hello Movie {{ id }} </h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        {% if title %}
+        <title> {{ title }}</title>
+        {% else %}
+        <title> Movie list </title>
+        {% endif %}
+    </head>
+    <body>
+
+    </body>
+</html>
