Add base template and implore template inheritance

--- a/app/templates/movie.html
+++ b/app/templates/movie.html
@@ -1,14 +1,2 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        {% if title %}
-        <title> {{ title }}</title>
-        {% else %}
-        <title> Movie list </title>
-        {% endif %}
-    </head>
-    <body>
-
-    </body>
-</html>
+{% extends 'base.html' %}
+{% import 'macros.html' as macro%}
