--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,4 @@
-{% extends 'bootstrap/base.html'%}
+{% extends 'base.html'%}
 {% import 'macros.html' as macro%}
 <!-- Content block -->
 {% block content %}
