--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,7 +1,19 @@
 {% macro displayMovieList(movie_list) %}
 
-    {% for movie in movie_list %}
-        <li>{{ movie.title}}</li>
-    {% endfor %}
+{% for movie in movie_list %}
+<div class="col-xs-12 col-sm-4 col-md-2 col-lg-2 movie-card">
+    <img src="{{ movie.poster }}" alt="{{ movie.title }} poster" class="img-responsive">
+    <li class="text-center">
+        <a href="/movie/{{movie.id}}">
+            {{ movie.title|truncate(10)}}</a> 
+    </li>
+</div>
+{% endfor %}
 
 {% endmacro %}
+
+<!-- 
+    The truncate filter shortens a variable size according to the characters we add to its parameters.
+
+    We add the Movie poster to be displayed . We then add an anchor tag that links to the dynamic URL /movie/movie.id. - Line7
+ -->
