--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,14 @@
 {% extends 'base.html'%}
 {% import 'macros.html' as macro%}
+
+<!-- Styles block -->
+
+{% block styles%}
+{{ super() }}
+<link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
+{% endblock %}
+<!-- Content block -->
+
 <!-- Content block -->
 {% block content %}
 
