--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,31 +2,33 @@
 {% import 'macros.html' as macro%}
 
 <!-- Styles block -->
-
 {% block styles%}
-{{ super() }}
-<link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
+    {{ super() }}
+    <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
 {% endblock %}
 <!-- Content block -->
 
 <!-- Content block -->
 {% block content %}
+    <div class="container">
+        <!-- Popular movie -->
+        <h3 class="title-heading"> Popular Movies</h3>
+        <div class="row">
+            <div class="col-3">{{ macro.displayMovieList(popular)}}</div>
+        </div>
 
-<!-- Popular movie -->
-<h3> Popular Movies</h3>
-<ul>
-    {{ macro.displayMovieList(popular)}}
-</ul>
-<!-- Upcoming movie  -->
-<h3> Upcoming Movies </h3>
-<ul>
-    {{ macro.displayMovieList(upcoming)}}
-</ul>
-<!-- Now showing movie -->
-<h3>Now Showing</h3>
-<ul>
-    {{ macro.displayMovieList(now_showing)}}
-</ul>
-
-
+        <!-- Upcoming movie  -->
+        <h3 class="title-heading"> Upcoming Movies </h3>
+        <div class="row">
+            <div class="col-3">
+                {{ macro.displayMovieList(upcoming)}}
+            </div>
+        </div>
+            
+        <!-- Now showing movie -->
+        <h3 class="title-heading">Now Showing</h3>
+        <div class="row">
+            <div class="col-3">{{ macro.displayMovieList(now_showing)}}</div>
+        </div>
+    </div>
 {% endblock%}
