--- a/app/templates/movie.html
+++ b/app/templates/movie.html
@@ -6,11 +6,11 @@
 
     <!-- Poster background -->
     <div class="row">
-        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 posterPath"
-            style="background: url({{movie.poster}}) no-repeat center center">
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 posterPath">
+            <img src="{{ movie.poster }}" alt="movie-img" class="movie-img">
         </div>
 
-        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 movie-details">
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 movie-details">
             <h3>{{ movie.title }}</h3>
             <p class="overview"> {{ movie.overview }}</p>
             <p class="ratings"> <b> {{ movie.vote_average }}</b> - <i>{{ movie.vote_count}} votes </i> </p>
