--- a/app/templates/movie.html
+++ b/app/templates/movie.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% import 'macros.html' as macro%}
 
 <!-- Content block -->
 {% block content %}
@@ -14,6 +15,18 @@
             <h3>{{ movie.title }}</h3>
             <p class="overview"> {{ movie.overview }}</p>
             <p class="ratings"> <b> {{ movie.vote_average }}</b> - <i>{{ movie.vote_count}} votes </i> </p>
+            <a class="ratings" href="/movie/review/new/{{movie.id}}"> Write a new review</a>
+
+            <div class="row">
+                <h1>Reviews</h1>
+                <hr>
+                {% if reviews %}
+                    {{macro.displayReviews(reviews)}}
+                {% else%}
+                    <h3 class="text-center">This movie has no reviews </h3>
+                    <a class="btn btn-success btn-lg text-center" href="/movie/review/new/{{movie.id}}"> Write a new review</a>
+                {% endif %}
+            </div>
         </div>
     </div>
 </div>
