--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -22,6 +22,14 @@
             {%else%}
             <p>No profile picture</p>
             {% endif %}
+            {% if user == current_user %}
+            <form action="{{url_for('main.update_pic',uname=user.username)}}" method="post"
+                enctype="multipart/form-data">
+
+                <input type="file" name="photo" class="form-control" required>
+                <input type="submit">
+            </form>
+            {% endif %}
         </div>
     </div>
     {% if user == current_user %}
